set and get storage functionalities

--- a/content.css
+++ b/content.css
@@ -52,7 +52,7 @@
     display: block;
     text-align: left;
 }
-#commentBtn {
+#submitBtn {
     display: inline-block;
     box-shadow: none;
     box-sizing: border-box;
