applied the component based approach and integration flow and styled component

--- a/src/content.css
+++ b/src/content.css
@@ -71,7 +71,7 @@
     border-color: transparent !important;
     border-image: initial !important;
 }
-#cancelBtn {
+.cancelBtn {
     display: inline-block;
     box-shadow: none;
     box-sizing: border-box;
